--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RELEASE_VERSION: '23.05.3/bcm27xx/bcm2710'
-      SDK_TAR: 'openwrt-sdk-21.02.3-bcm27xx-bcm2710_gcc-8.4.0_musl.Linux-x86_64.tar.xz'
-      SDK_FOLDER: 'openwrt-sdk-21.02.3-bcm27xx-bcm2710_gcc-8.4.0_musl.Linux-x86_64'
-      SDK_URL: 'https://downloads.openwrt.org/releases/21.02.3/targets/bcm27xx/bcm2710/openwrt-sdk-21.02.3-bcm27xx-bcm2710_gcc-8.4.0_musl.Linux-x86_64.tar.xz'
+      SDK_TAR: 'openwrt-sdk-bcm27xx-bcm2710_gcc-13.2.0_musl.Linux-x86_64.tar.zst'
+      SDK_FOLDER: 'openwrt-sdk-bcm27xx-bcm2710_gcc-13.2.0_musl.Linux-x86_64'
+      SDK_URL: 'https://downloads.openwrt.org/snapshots/targets/bcm27xx/bcm2710/openwrt-sdk-bcm27xx-bcm2710_gcc-13.2.0_musl.Linux-x86_64.tar.zst'
       BUILD_DIR: '${{ github.workspace }}'
       SDK_DIR: '${{ github.workspace }}/openwrt-sdk'
       KISMET_REPO_DIR: '${{ github.workspace }}/kismet-packages'
